--- a/index.html
+++ b/index.html
@@ -20,6 +20,26 @@
       href="https://fonts.googleapis.com/css2?family=Acme&family=Lato&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Favicons -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./src/assets/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./src/assets/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./src/assets/favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./src/assets/favicon_io/site.webmanifest" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
