Added Google oAuth

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
     <title>Motzash</title>
 
     <!-- Mapbox CSS -->
@@ -22,6 +21,11 @@
     />
 
     <!-- Favicons -->
+    <link
+      rel="shortcut icon"
+      type="image/ico"
+      href="/src/assets/favicon_io/favicon.ico"
+    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
