Added Open Graph tags Changed spacing for large screens

--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <meta name="theme-color" content="#000000" />
     <title>Motzash</title>
 
+    <!-- Open Graph -->
+    <meta property="og:title" content="The Rock" />
+    <meta property="og:type" content="video.movie" />
+    <meta property="og:url" content="https://motzash.app" />
+    <meta
+      property="og:image"
+      content="https://motzash.app/motzash-preview.png"
+    />
+    <meta
+      property="og:description"
+      content="Motzash is your dashboard companion for Jewish holidays.
+      Use Motzash to get time for candle lighting and havdalah for Shabbat and Chag, and plan your Holy days with friends!"
+    />
+    <meta property="og:site_name" content="Motzash" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@theAbeTrain" />
+
     <!-- Mapbox CSS -->
     <link
       href="https://api.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.css"
