Fixed open graph tags

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Motzash</title>
 
     <!-- Open Graph -->
-    <meta property="og:title" content="The Rock" />
-    <meta property="og:type" content="video.movie" />
+    <meta property="og:title" content="Motzash" />
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="https://motzash.app" />
     <meta
       property="og:image"
