--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Motzash is your dashboard companion for Jewish holidays.
+    Use Motzash to get time for candle lighting and havdalah for Shabbat and Chag, and plan your Holy days with friends!"
+    />
     <title>Motzash</title>
 
     <!-- Open Graph -->
