--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#FFFF66" />
     <meta
       name="description"
       content="Motzash is your dashboard companion for Jewish holidays.
@@ -15,10 +15,7 @@
     <meta property="og:title" content="Motzash" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://motzash.app" />
-    <meta
-      property="og:image"
-      content="https://motzash.app/motzash-preview.png"
-    />
+    <meta property="og:image" content="/motzash-preview.png" />
     <meta
       property="og:description"
       content="Motzash is your dashboard companion for Jewish holidays.
@@ -45,29 +42,12 @@
     />
 
     <!-- Favicons -->
-    <link
-      rel="shortcut icon"
-      type="image/ico"
-      href="/src/assets/favicon_io/favicon.ico"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./src/assets/favicon_io/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./src/assets/favicon_io/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./src/assets/favicon_io/favicon-16x16.png"
-    />
-    <link rel="manifest" href="./src/assets/favicon_io/site.webmanifest" />
+    <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/mask.svg" color="#FFFF66" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
