Edited og:image link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <meta property="og:title" content="Motzash" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://motzash.app" />
-    <meta property="og:image" content="/motzash-preview.png" />
+    <meta
+      property="og:image"
+      content="https://motzash.app/motzash-preview.png"
+    />
     <meta
       property="og:description"
       content="Motzash is your dashboard companion for Jewish holidays.
