Changed chag to chaggim

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta
       name="description"
       content="Motzash is your dashboard companion for Jewish holidays.
-    Use Motzash to get time for candle lighting and havdalah for Shabbat and Chag, and plan your Holy days with friends!"
+    Use Motzash to get time for candle lighting and havdalah for Shabbat and Chaggim, and plan your Holy days with friends!"
     />
     <title>Motzash</title>
 
@@ -19,10 +19,11 @@
       property="og:image"
       content="https://motzash.app/motzash-preview.png"
     />
+    <meta property="og:image:alt" content="Motzash logo" />
     <meta
       property="og:description"
       content="Motzash is your dashboard companion for Jewish holidays.
-      Use Motzash to get time for candle lighting and havdalah for Shabbat and Chag, and plan your Holy days with friends!"
+      Use Motzash to get time for candle lighting and havdalah for Shabbat and Chaggim, and plan your Holy days with friends!"
     />
     <meta property="og:site_name" content="Motzash" />
 
